Fixed overflows to scroll and handled email errors server side

--- a/src/styles/components/About.css
+++ b/src/styles/components/About.css
@@ -28,6 +28,7 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  overflow: auto;
 
   height: 65%;
   margin-right: 3rem;
