--- a/src/styles/components/Contact.css
+++ b/src/styles/components/Contact.css
@@ -2,6 +2,7 @@
   display: flex;
   align-items: center;
   height: 30rem;
+  margin-bottom: 4rem;
 
   border-radius: 2px;
 }
